[gd_scene load_steps=5 format=3 uid="uid://d34x7b1hjte46"]

[ext_resource type="Script" uid="uid://dxyxtt2rwxcho" path="res://scripts/highscore_screen.gd" id="1_kpoy6"]
[ext_resource type="Texture2D" uid="uid://braiey6axaqd1" path="res://imagenes/fondoblanco.png" id="1_twgme"]
[ext_resource type="Texture2D" uid="uid://ctrcl6rgbbwsx" path="res://imagenes/botonsalirvictoria.png" id="3_2nh8f"]
[ext_resource type="Texture2D" uid="uid://rmgomshp72g4" path="res://imagenes/botonjugar.png" id="3_kpoy6"]

[node name="highscore_screen" type="Node2D"]
script = ExtResource("1_kpoy6")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("1_twgme")

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = -231.0
offset_top = -248.0
offset_right = -2.0
offset_bottom = -170.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 52
text = "Nombre"
fit_content = true

[node name="TablaPosiciones" type="RichTextLabel" parent="."]
offset_left = -482.0
offset_top = -182.0
offset_right = -250.0
offset_bottom = 100.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
scroll_active = false
horizontal_alignment = 2

[node name="TablaPuntajeNombres" type="RichTextLabel" parent="."]
offset_left = -242.0
offset_top = -182.0
offset_right = -10.0
offset_bottom = 100.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
scroll_active = false
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -271.0
offset_top = -317.0
offset_right = 348.0
offset_bottom = -240.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 52
text = "Puntitos de gente Cul"
fit_content = true

[node name="jugar" type="TextureRect" parent="."]
offset_left = -660.0
offset_top = 136.0
offset_right = 340.0
offset_bottom = 336.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("3_kpoy6")
stretch_mode = 2
metadata/_edit_group_ = true

[node name="botonjugar" type="Button" parent="jugar"]
layout_mode = 0
offset_left = 292.0
offset_top = 1.0
offset_right = 734.0
offset_bottom = 198.0
flat = true

[node name="salir" type="TextureRect" parent="."]
offset_left = 8.0
offset_top = 116.0
offset_right = 569.0
offset_bottom = 316.0
texture = ExtResource("3_2nh8f")
stretch_mode = 2
metadata/_edit_group_ = true

[node name="botonsalir" type="Button" parent="salir"]
layout_mode = 0
offset_left = 107.0
offset_top = 35.0
offset_right = 394.0
offset_bottom = 174.0
flat = true

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
offset_left = 49.0
offset_top = -247.0
offset_right = 278.0
offset_bottom = -169.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 52
text = "Puntaje"
fit_content = true

[node name="TablaPuntajePuntos" type="RichTextLabel" parent="."]
offset_left = 35.0
offset_top = -179.0
offset_right = 267.0
offset_bottom = 99.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[connection signal="pressed" from="jugar/botonjugar" to="." method="_on_botonjugar_pressed"]
[connection signal="pressed" from="salir/botonsalir" to="." method="_on_botonsalir_pressed"]
